// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`2. default layout without uri 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={null}
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`3. default layout without aspect ratio 1`] = `
<View>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`4. rounded image 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`5. prepend https schema 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "https://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "https://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`6. handle onload event 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`6. handle onload event 2`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
</View>
`;

exports[`7. handle onload event with disabled placeholder 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
</View>
`;

exports[`7. handle onload event with disabled placeholder 2`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
</View>
`;

exports[`8. componentwillunmount cancels animation timer 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`10. uses highressize if it exists 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=660",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`12. uses lowressize image as placeholder if passed 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=2308&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=2308",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View>
      <Image
        fadeDuration={0}
        fadeImageIn={false}
        source={
          Object {
            "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=800",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`13. handle layout change 1`] = `
<View
  aspectRatio={2}
>
  <View>
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080&offline=true&rel_height=0.4&rel_width=0.5&rel_horizontal_offset=0.16666666666666666&rel_vertical_offset=0.2",
        }
      }
    />
    <Image
      fadeDuration={0}
      fadeImageIn={false}
      relativeHeight={0.4}
      relativeHorizontalOffset={0.16666666666666666}
      relativeVerticalOffset={0.2}
      relativeWidth={0.5}
      source={
        Object {
          "uri": "http://example.com/image.jpg?crop=1016%2C677%2C0%2C0&resize=1080",
        }
      }
    />
  </View>
  <View
    collapsable={false}
  >
    <View
      height="100%"
      width="100%"
    >
      <Image
        fadeDuration={0}
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/image/assets/t.png",
          }
        }
      />
    </View>
  </View>
</View>
`;
